--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ numpy==1.7.0
 matplotlib==1.2.0
 networkx==1.7
 
-# not needed for analysis
-requests
+tweetstream==1.1.1
+simplejson==3.1.0
+requests==1.1.0
+python-dateutil==2.1
